# IMTegrale

./: .env.development.example  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/alembic/: env.py
backend/app/: __init__.py  academic_numbers.py  admin_security.py  api_models.py  calculations.py  cli.py  config.py  database.py  errors.py  limits.py  main.py  models.py  models_operations.py  observability.py  schemas.py  security.py  (+2 more)
deploy/: README.md  backup.sh  botnote-backup.service  botnote-backup.timer  botnote-cli  botnote-job-worker@.service  botnote-operations-check.service  botnote-operations-check.timer  botnote-restore-test.service  botnote-restore-test.timer  botnote-runtime.env  botnote-scheduler.service  botnote-web.service  botnote-worker.service  botnote-worker.timer  network.env.example  restore-test.sh
docs/: academic-report.md  academic-rounding.md  automatic-sync.md  brand.md  calendars.md  data-and-usage.md  leaderboard.md  manual-sync.md  operations.md  presentation-schema-v2.md  presentation-schema-v3.md  results.md  simulations.md
frontend/: .prettierignore  eslint.config.js  index.html  openapi-ts.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts
openapi/: imtegrale.openapi.json
scripts/: audit_release.py  check_content_boundary.py  check_coverage.py  check_secrets.py  export_openapi.py  generate_sbom.py  smoke_release.py
(+279 files in other folders)
